<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="44dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Feedback Form Title -->
            <TextView
                android:id="@+id/feedback_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="24dp"
                android:text="@string/share_your_feedback_here"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- Name Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="username"
                android:background="@android:drawable/edit_text"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:padding="12dp" />

            <!-- Email Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="emailAddress"
                android:background="@android:drawable/edit_text"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:padding="12dp" />

            <!-- Feedback Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/feedback"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:autofillHints="feedback"
                android:background="@android:drawable/edit_text"
                android:gravity="top"
                android:hint="@string/write_your_feedback"
                android:inputType="textMultiLine"
                android:minLines="10"
                android:padding="12dp" />

            <!-- Submit Button -->
            <Button
                android:id="@+id/submit_button"
                android:onClick="submitFeedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:padding="12dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="359dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:background="@drawable/rounded_corner"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/screens"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.841"
        app:menu="@menu/menu"
        android:foregroundGravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>