<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondRegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="true"
            android:padding="16dp" />

        <!-- Team Size (SeekBar) -->
        <TextView
            android:id="@+id/team_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_number_of_team_members"
            android:textStyle="bold"
            android:layout_below="@id/progressBar"
            android:layout_marginTop="16dp" />

        <SeekBar
            android:id="@+id/team_size_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:min="3"
            android:layout_below="@id/team_size_label"
            android:layout_marginTop="8dp"
            tools:targetApi="o" />

        <!-- Team Member 1 Info -->
        <EditText
            android:id="@+id/member1_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_member_1_name"
            android:textSize="14sp"
            android:layout_below="@id/team_size_seekbar"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:autofillHints="name" />

        <!-- Team Member 2 Info -->
        <EditText
            android:id="@+id/member2_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_member_2_name"
            android:textSize="14sp"
            android:layout_below="@id/member1_name"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:autofillHints="name" />

        <!-- Team Member 3 Info -->
        <EditText
            android:id="@+id/member3_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_member_3_name"
            android:textSize="14sp"
            android:layout_below="@id/member2_name"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:autofillHints="name" />

        <!-- Team Member 4 Info -->
        <EditText
            android:id="@+id/member4_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/team_member_4_name_if_applicable"
            android:textSize="14sp"
            android:layout_below="@id/member3_name"
            android:layout_marginTop="16dp"
            android:inputType="text"
            android:autofillHints="name" />

        <!-- Team Member 5 Info -->
        <EditText
            android:id="@+id/member5_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/team_member_5_name_if_applicable"
            android:inputType="text"
            android:textSize="14sp"
            android:layout_below="@id/member4_name"
            android:layout_marginTop="16dp" />


        <!-- Button (Submit Team Info) -->
        <Button
            android:id="@+id/submit_registration_button"
            android:onClick="LaunchFinalPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_below="@id/member5_name"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_orange_dark"
            />

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_bar"
        android:layout_width="359dp"
        android:layout_height="80dp"
        android:layout_margin="30dp"
        android:background="@drawable/rounded_corner"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/screens"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.841"
        app:menu="@menu/menu"
        android:foregroundGravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>